tests/unit/elastx/resources/kubespray/sc/kube-system/service-cluster-np.yaml
---
# Source: networkpolicy-service/templates/dex/allow-dex.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-dex
  namespace: dex
spec:
  policyTypes:
    - Ingress
    - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/name: dex
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: controller
              app.kubernetes.io/instance: ingress-nginx
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: user-grafana
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: grafana
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: opensearch-master
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: opensearch-system
        - podSelector:
            matchLabels:
              app: opensearch-dashboards
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: opensearch-system
      ports:
        - port: 5556
    - from:
      - podSelector:
            matchLabels:
              app.kubernetes.io/instance: kube-prometheus-stack-prometheus
              app.kubernetes.io/name: prometheus
        namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - port: 5558
  egress:
    - to:
      - ipBlock:
          cidr: 0.0.0.0/0
      ports:
        - port: 443
    - to:
      - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 6443
    - ports:
      - protocol: UDP
        port: 53
      - protocol: TCP
        port: 53
---
# Source: networkpolicy-service/templates/dex/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dex-default-deny-all
  namespace: dex
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
# Source: networkpolicy-service/templates/ingress-nginx/controller.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: controller
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus-blackbox-exporter
              app.kubernetes.io/instance: prometheus-blackbox-exporter
      ports:
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 80
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: kube-prometheus-stack-prometheus
      ports:
        - port: 10254
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus-blackbox-exporter
              app.kubernetes.io/instance: prometheus-blackbox-exporter
      ports:
        - protocol: TCP
          port: 8443 ## admission
  egress:
    - ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 80
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 6443
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: grafana
      ports:
        - port: 3000
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: opensearch-system
          podSelector:
            matchLabels:
              app: opensearch-dashboards
      ports:
        - port: 5601
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: opensearch-system
          podSelector:
            matchLabels:
              app.kubernetes.io/component: opensearch-master
      ports:
        - port: 9200
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: harbor
          podSelector:
            matchLabels:
              component: core
      ports:
        - port: 8080
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: harbor
          podSelector:
            matchLabels:
              component: portal
      ports:
        - port: 8080
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: dex
          podSelector:
            matchLabels:
              app.kubernetes.io/name: dex
      ports:
        - port: 5556
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: thanos
          podSelector:
            matchLabels:
              app.kubernetes.io/component: receive-distributor
      ports:
        - port: 10902 # HTTP API
        - port: 19291 # Remote Write
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: default-backend
      ports:
        - port: 8080
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              acme.cert-manager.io/http01-solver: "true"
      ports:
        - port: 8089
---
# Source: networkpolicy-service/templates/ingress-nginx/default-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-nginx-default-backend
  namespace: ingress-nginx
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: default-backend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: controller
              app.kubernetes.io/instance: ingress-nginx
      ports:
        - protocol: TCP
          port: 8080
---
# Source: networkpolicy-service/templates/ingress-nginx/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-nginx-deny-all
  namespace: ingress-nginx
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
# Source: networkpolicy-service/templates/ingress-nginx/webhook.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-nginx-webhook
  namespace: ingress-nginx
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: admission-webhook
  policyTypes:
    - Egress
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 6443
---
# Source: networkpolicy-service/templates/opensearch/configurer.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-opensearch-configurer
  namespace: opensearch-system
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      app: configurer
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: opensearch-master
      ports:
        - port: 9200
    - to:
        - podSelector:
            matchLabels:
              app: opensearch-dashboards
      ports:
        - port: 5601
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
---
# Source: networkpolicy-service/templates/opensearch/curator.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-opensearch-curator
  namespace: opensearch-system
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: opensearch-curator
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: opensearch-master
      ports:
        - port: 9200
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
---
# Source: networkpolicy-service/templates/opensearch/dashboard.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-opensearch-dashboard
  namespace: opensearch-system
spec:
  policyTypes:
    - Ingress
    - Egress
  podSelector:
    matchLabels:
      app: opensearch-dashboards
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/component: controller
              app.kubernetes.io/instance: ingress-nginx
        - podSelector:
            matchLabels:
              app: configurer
      ports:
        - port: 5601
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: dex
          podSelector:
            matchLabels:
              app.kubernetes.io/name: dex
      ports:
        - port: 5556
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: opensearch-master
      ports:
        - port: 9200
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/component: controller
              app.kubernetes.io/instance: ingress-nginx
      ports:
        - protocol: TCP
          port: 443
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
---
# Source: networkpolicy-service/templates/opensearch/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-opensearch
  namespace: opensearch-system
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
# Source: networkpolicy-service/templates/opensearch/default-deny.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-opensearch-acme-pods
  namespace: opensearch-system
spec:
  policyTypes:
    - Ingress
  podSelector:
    matchLabels:
      acme.cert-manager.io/http01-solver: "true"
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/component: controller
              app.kubernetes.io/instance: ingress-nginx
      ports:
      - port: 8089
        protocol: TCP
---
# Source: networkpolicy-service/templates/opensearch/master.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-opensearch-master
  namespace: opensearch-system
spec:
  policyTypes:
    - Ingress
    - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/component: opensearch-master
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: opensearch-curator
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: opensearch-slm
        - podSelector:
            matchLabels:
              app: opensearch-dashboards
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus-elasticsearch-exporter
        - podSelector:
            matchLabels:
              app: configurer
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: opensearch-securityadmin
      # Allow api port from ingress-ngix
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/component: controller
              app.kubernetes.io/instance: ingress-nginx
      ports:
        - port: 9200
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: opensearch-master
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: opensearch-data
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: opensearch-client
      ports:
        - port: 9300
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: opensearch-master
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: opensearch-data
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: opensearch-client
      ports:
        - port: 9300
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: dex
              app.kubernetes.io/instance: dex
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: dex
      ports:
        - port: 5556
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 5000
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 443
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/component: controller
              app.kubernetes.io/instance: ingress-nginx
      ports:
        - protocol: TCP
          port: 443
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
---
# Source: networkpolicy-service/templates/opensearch/prometheus-exporter.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-opensearch-prometheus-exporter
  namespace: opensearch-system
spec:
  policyTypes:
    - Ingress
    - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus-elasticsearch-exporter

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: kube-prometheus-stack-prometheus
              app.kubernetes.io/name: prometheus
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - port: 9108
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: opensearch-master
      ports:
        - port: 9200
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
---
# Source: networkpolicy-service/templates/opensearch/security-admin.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-opensearch-securityadmin
  namespace: opensearch-system
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: opensearch-securityadmin
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: opensearch-master
      ports:
        - port: 9200
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
---
# Source: networkpolicy-service/templates/opensearch/slm.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-opensearch-slm
  namespace: opensearch-system
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: opensearch-slm
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: opensearch-master
      ports:
        - port: 9200
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
